--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shape and Dots Configurator</title>
 
+    <script src="https://cdn.jsdelivr.net/npm/bezier-js@2/bezier.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/opentype.js@0/dist/opentype.js"></script>
+
     <!-- Include Maker.js -->
     <script src="docs/target/js/browser.maker.js"></script>
-
-    <script src="https://pomax.github.io/bezierjs/bezier.js" type="text/javascript"></script>
-
-    <script src="http://opentype.js.org/dist/opentype.js" type="text/javascript"></script>
 
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
@@ -50,6 +50,14 @@
             width: 100%;
             height: 600px;
         }
+
+        #svgOutput text {
+            fill: black;
+            stroke: none;
+            font-size: 2px;
+            text-shadow: 2px 2px 0 white, -2px -2px 0 white, 2px -2px 0 white, -2px 2px 0 white;
+        }
+
         svg {
             width: 100%;
             height: 100%;
@@ -162,7 +170,9 @@
     <!-- SVG Output Section (Right) -->
     <div class="svg-section">
         <h2 class="text-xl mb-2">SVG Output</h2>
-        <div id="svgOutput" class="border rounded p-2 mt-2 bg-white"></div>
+        <div style="display: flex; transform: rotate(0deg) scale(1); transition: transform 0.5s; transform-origin: center center;">
+            <div id="svgOutput" class="border rounded p-2 mt-2 bg-white"></div>
+        </div>
     </div>
 </div>
 
@@ -191,14 +201,20 @@
             },
 
             // Helper function to fetch the model with its parameters
-            modelFetcher(type, parameters) {
+            modelFetcher(type, parameters, addDimensions = false) {
                 const parametersArray = [];
                 for (const key in parameters) {
                     parametersArray.push(parseInt(parameters[key]));
                 }
                 console.log(parametersArray);
 
-                return makerjs.manager.getModel(type, parametersArray);
+                var model = makerjs.manager.getModel(type, parametersArray);
+
+                if(addDimensions) {
+                    makerjs.dimension.applyDimensions(model, parametersArray);
+                }
+
+                return model;
             },
 
             addOverlay() {
@@ -215,7 +231,14 @@
                 this.dots.push({ dotType: '', dotParameters: {}, position: { x: 0, y: 0 } });
                 this.updateConfig();
             },
+            getParamsArray(parameters) {
+                const parametersArray = [];
+                for (const key in parameters) {
+                    parametersArray.push(parseInt(parameters[key]));
+                }
 
+                return parametersArray;
+            },
             removeDot(index) {
                 this.dots.splice(index, 1);
                 this.updateConfig();
@@ -297,12 +320,13 @@
 
                 // Fetch main shape using modelFetcher
                 let mainShape = this.modelFetcher(this.mainFrame.shapetype, this.mainFrame.shapeParameters);
+                let dimensionModels = makerjs.dimension.applyDimensions(mainShape, this.getParamsArray(this.mainFrame.shapeParameters));
 
                 // Safeguard: Only render if mainShape exists
                 if (!mainShape) return;
 
                 // Center the main shape
-                mainShape = makerjs.model.center(mainShape);
+                //mainShape = makerjs.model.center(mainShape);
 
                 overlayShapes = {};
 
@@ -367,17 +391,16 @@
                     }
                 });
 
-                mainShape = new makerjs.model.combineSubtraction(
-                    mainShape,
-                    overlayShapes
-                );
+                // Combine the main shape with the overlays and dots
+                //mainShape = new makerjs.model.combine(mainShape, overlayShapes, true, true, true, true);
+
+                console.log(mainShape);
+
 
                 // Safeguard: Only render SVG if mainShape exists
                 if (mainShape) {
                     const options = {};
-                    options.stroke = "black";
-                    options.strokeWidth = "4px";
-                    options.units = "mm";
+
                     const svg = makerjs.exporter.toSVG(mainShape, options);
                     svgContainer.innerHTML = svg;
                 }
