--- a/index2.html
+++ b/index2.html
@@ -98,7 +98,7 @@
                 <template x-for="param in getParameters(mainFrame.shapetype, 'shape')">
                     <div class="mt-2">
                         <label x-text="param.title"></label>
-                        <input type="number" x-model="mainFrame.shapeParameters[param.title]" @input="renderSvg()" class="border rounded p-2 ml-2" :disabled="is_finalized">
+                        <input type="number" x-model="mainFrame.shapeParameters[param.title]" @input="updateConfig()" class="border rounded p-2 ml-2" :disabled="is_finalized">
                     </div>
                 </template>
                 <div class="mt-2">
@@ -123,18 +123,18 @@
                     <!-- Position Fields for Cutouts -->
                     <div class="mt-2">
                         <label>X Position</label>
-                        <input type="number" x-model="cutout.position.x" @input="renderSvg()" class="border rounded p-2 ml-2" :disabled="is_finalized">
+                        <input type="number" x-model="cutout.position.x" @input="updateConfig()" class="border rounded p-2 ml-2" :disabled="is_finalized">
                     </div>
                     <div class="mt-2">
                         <label>Y Position</label>
-                        <input type="number" x-model="cutout.position.y" @input="renderSvg()" class="border rounded p-2 ml-2" :disabled="is_finalized">
+                        <input type="number" x-model="cutout.position.y" @input="updateConfig()" class="border rounded p-2 ml-2" :disabled="is_finalized">
                     </div>
 
                     <!-- Shape Parameters for Cutouts -->
                     <template x-for="param in getParameters(cutout.shapetype, 'shape')">
                         <div class="mt-2">
                             <label x-text="param.title"></label>
-                            <input type="number" x-model="cutout.shapeParameters[param.title]" @input="renderSvg()" class="border rounded p-2 ml-2" :disabled="is_finalized">
+                            <input type="number" x-model="cutout.shapeParameters[param.title]" @input="updateConfig()" class="border rounded p-2 ml-2" :disabled="is_finalized">
                         </div>
                     </template>
                     <div class="mt-2">
@@ -162,18 +162,18 @@
                     <!-- Position Fields for Dots -->
                     <div class="mt-2">
                         <label>X Position</label>
-                        <input type="number" x-model="dot.position.x" @input="renderSvg()" class="border rounded p-2 ml-2" :disabled="is_finalized">
+                        <input type="number" x-model="dot.position.x" @input="updateConfig()" class="border rounded p-2 ml-2" :disabled="is_finalized">
                     </div>
                     <div class="mt-2">
                         <label>Y Position</label>
-                        <input type="number" x-model="dot.position.y" @input="renderSvg()" class="border rounded p-2 ml-2" :disabled="is_finalized">
+                        <input type="number" x-model="dot.position.y" @input="updateConfig()" class="border rounded p-2 ml-2" :disabled="is_finalized">
                     </div>
 
                     <!-- Dot Parameters -->
                     <template x-for="param in getParameters(dot.dotType, 'dot')">
                         <div class="mt-2">
                             <label x-text="param.title"></label>
-                            <input type="number" x-model="dot.dotParameters[param.title]" @input="renderSvg()" class="border rounded p-2 ml-2" :disabled="is_finalized">
+                            <input type="number" x-model="dot.dotParameters[param.title]" @input="updateConfig()" class="border rounded p-2 ml-2" :disabled="is_finalized">
                         </div>
                     </template>
                     <button @click="removeDot(index)" :class="{'disabled-button': is_finalized}" class="bg-red-500 text-white p-1 rounded ml-2" :disabled="is_finalized">Remove</button>
@@ -255,22 +255,6 @@
                 }
 
                 return parametersArray;
-            },
-
-            modelFetcher(type, parameters, addDimensions = false) {
-                const parametersArray = [];
-                for (const key in parameters) {
-                    parametersArray.push(parseInt(parameters[key]));
-                }
-                console.log(parametersArray);
-
-                var model = makerjs.manager.getModel(type, parametersArray);
-
-                if(addDimensions) {
-                    makerjs.dimension.applyDimensions(model, parametersArray);
-                }
-
-                return model;
             },
 
             addCutout() {
@@ -372,7 +356,7 @@
                 const svgContainer = document.getElementById('svgOutput');
                 svgContainer.innerHTML = '';
 
-                let mainShape = makerjs.manager.getModel(this.mainFrame.shapetype, this.mainFrame.shapeParameters);
+                let mainShape = makerjs.manager.fetchMainModel(this.mainFrame.shapetype, this.mainFrame.shapeParameters);
 
                 if (!mainShape) return;
 
