--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
             text-shadow: 2px 2px 0 white, -2px -2px 0 white, 2px -2px 0 white, -2px 2px 0 white;
         }
 
+        #svgOutput #gray {
+            opacity: .3;
+        }
+
         svg {
             width: 100%;
             height: 100%;
@@ -104,6 +108,35 @@
                 <div class="mt-2">
                     <label>Show Dimension Arrows</label>
                     <input checkbox type="checkbox" value="true" x-on:change.debounce="updateConfig()" x-model="mainFrame.showDimensions" @input="updateConfig()" class="border rounded p-2 ml-2">
+                </div>
+                <div class="mt-2">
+                    <!-- Checkbox to show/hide grid -->
+                    <label>
+                        <input type="checkbox" x-model="mainFrame.showGrid" @change="updateConfig()">
+                        Show Grid
+                    </label>
+
+                    <!-- Radio buttons for 1cm or 5mm grid spacing -->
+                    <div class="radio-options" x-show="mainFrame.showGrid">
+                        <label>
+                            <input type="radio" name="gridSize" value="cm" x-model="mainFrame.gridUnit" @change="updateConfig()">
+                            10cm
+                        </label>
+                        <label>
+                            <input type="radio" name="gridSize" value="5mm" x-model="mainFrame.gridUnit" @change="updateConfig()">
+                            5cm
+                        </label>
+
+                        <!-- Position Fields for Grid -->
+                        <div class="mt-2">
+                            <label>X Position</label>
+                            <input type="number" min="0" max="15" x-model="mainFrame.gridPositionX" @input="updateConfig()" class="border rounded p-2 ml-2" :disabled="is_finalized">
+                        </div>
+                        <div class="mt-2">
+                            <label>Y Position</label>
+                            <input type="number" min="0" max="15" x-model="mainFrame.gridPositionY" @input="updateConfig()" class="border rounded p-2 ml-2" :disabled="is_finalized">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -217,7 +250,7 @@
 
     function shapeConfigurator() {
         return {
-            mainFrame: { shapetype: "", shapeParameters: {}, showDimensions: true }, // Initialize main frame
+            mainFrame: { shapetype: "", shapeParameters: {}, showDimensions: true, showGrid: false }, // Initialize main frame
             cutouts: [], // Initialize cutouts array
             dots: [], // Initialize dots array
             outputJson: "",
@@ -478,6 +511,18 @@
                     options.strokeWidth = 3;
                     options.annotate = false;
 
+                    if(this.mainFrame.showGrid && this.mainFrame.gridUnit) {
+                        let grids= new makerjs.models.Grid(mainShape, this.mainFrame.gridUnit, this.mainFrame.gridPositionX || 0, this.mainFrame.gridPositionY || 0);
+                        grids.layer = "gray";
+                        mainShape = {
+                            models : {
+                                frame: grids,
+                                shape: mainShape,
+                            }
+                        };
+                    }
+                    makerjs.model.center(mainShape);
+                    makerjs.model.originate(mainShape);
                     const svg = makerjs.exporter.toSVG(mainShape, options);
                     svgContainer.innerHTML = svg;
                 }
