Grid functionality is added

--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
                         <!-- Position Fields for Grid -->
                         <div class="mt-2">
                             <label>X Position</label>
-                            <input type="number" min="0" max="15" x-model="mainFrame.gridPositionX" @input="updateConfig()" class="border rounded p-2 ml-2" :disabled="is_finalized">
+                            <input type="number" min="0" max="15" x-model="mainFrame.gridPositionX" @input="updateConfig()" class="border rounded p-2 ml-2" >
                         </div>
                         <div class="mt-2">
                             <label>Y Position</label>
-                            <input type="number" min="0" max="15" x-model="mainFrame.gridPositionY" @input="updateConfig()" class="border rounded p-2 ml-2" :disabled="is_finalized">
+                            <input type="number" min="0" max="15" x-model="mainFrame.gridPositionY" @input="updateConfig()" class="border rounded p-2 ml-2" >
                         </div>
                     </div>
                 </div>
