--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
         #svgOutput text {
             fill: black;
             stroke: none;
-            font-size: 2px;
             text-shadow: 2px 2px 0 white, -2px -2px 0 white, 2px -2px 0 white, -2px 2px 0 white;
         }
 
@@ -384,8 +383,6 @@
             },
 
             renderSvg() {
-                console.log(this.mainFrame);
-                console.log(this.cutouts);
                 const svgContainer = document.getElementById('svgOutput');
                 svgContainer.innerHTML = '';
 
@@ -508,8 +505,11 @@
 
                 if (mainShape) {
                     const options = {};
+                    let shapeWidth = mainShapeExtents.high[0] - mainShapeExtents.low[0];
+                    let shapeHeight = mainShapeExtents.high[1] - mainShapeExtents.low[1];
                     options.strokeWidth = 3;
                     options.annotate = false;
+                    options.fontSize = Math.max(Math.max(shapeWidth/30, 3), Math.max(shapeHeight/30, 3));
 
                     if(this.mainFrame.showGrid && this.mainFrame.gridUnit) {
                         let grids= new makerjs.models.Grid(mainShape, this.mainFrame.gridUnit, this.mainFrame.gridPositionX || 0, this.mainFrame.gridPositionY || 0);
